force-app/main/default/objects/Quote/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <description>Used in quote template.</description>
    <formula>Opportunity.Prescriber__r.BillingCity</formula>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>