force-app/main/default/objects/Quote/fields/EGEKO_Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>EGEKO_Confirmation_Number__c</fullName>
    <description>Tracks the confirmation number we received from the EGEKO</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EGEKO Confirmation Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>