force-app/main/default/objects/Quote/fields/Estimate_No__c.field-meta.xml
<CustomField>
    <fullName>Estimate_No__c</fullName>
    <formula>&apos;Estimate-No.: &apos; + QuoteNumber</formula>
    <label>Estimate No</label>
    <type>Text</type>
</CustomField>