force-app/main/default/objects/Quote/fields/Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Number__c</fullName>
    <formula>Opportunity.Benefit__r.Authorization_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Number</label>
    <type>Text</type>
</CustomField>