force-app/main/default/objects/Quote/fields/Med_Fac_City__c.field-meta.xml
<CustomField>
    <fullName>Med_Fac_City__c</fullName>
    <description>Used in Quote.</description>
    <formula>Opportunity.Medical_Facility__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Med Fac City</label>
    <type>Text</type>
</CustomField>