force-app/main/default/objects/Quote/fields/Med_Fac_Name__c.field-meta.xml
<CustomField>
    <fullName>Med_Fac_Name__c</fullName>
    <description>Used in quote.</description>
    <formula>Opportunity.Medical_Facility__r.Name</formula>
    <label>Med Fac Name</label>
    <type>Text</type>
</CustomField>