force-app/main/default/objects/Quote/fields/Med_Fac_Street__c.field-meta.xml
<CustomField>
    <fullName>Med_Fac_Street__c</fullName>
    <description>Used in Quote.</description>
    <formula>Opportunity.Medical_Facility__r.BillingStreet</formula>
    <label>Med Fac Street</label>
    <type>Text</type>
</CustomField>