force-app/main/default/objects/Quote/fields/Med_Fac_Zip__c.field-meta.xml
<CustomField>
    <fullName>Med_Fac_Zip__c</fullName>
    <description>Used in Quote.</description>
    <formula>Opportunity.Medical_Facility__r.BillingPostalCode</formula>
    <label>Med Fac Zip</label>
    <type>Text</type>
</CustomField>