force-app/main/default/objects/Quote/fields/Patient_Details__c.field-meta.xml
<CustomField>
    <fullName>Patient_Details__c</fullName>
    <formula>&quot;Patient: &quot; &amp;   Opportunity.Account.AccountNumber  &amp;&quot; , &quot; &amp;  Opportunity.Account.Name  &amp;&quot; , &quot; &amp;  Opportunity.Account.BillingStreet  &amp;&quot; , &quot; &amp; Opportunity.Account.BillingCity  &amp;&quot; , &quot; &amp; Opportunity.Account.BillingPostalCode  &amp;&quot; , &quot; &amp; Opportunity.Account.BillingState &amp;&quot; , Insurance Number:  &quot; &amp;  Opportunity.Benefit__r.Authorization_Number__c &amp;&quot; , Supply Period From:  &quot; &amp;  TEXT ( Opportunity.Benefit__r.Auth_Start_Date__c)  &amp;&quot; to &quot; &amp;  TEXT ( Opportunity.Benefit__r.Auth_End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Details</label>
    <type>Text</type>
</CustomField>