force-app/main/default/objects/Quote/fields/Prescriber_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Billing_Street__c</fullName>
    <description>Used in quote template.</description>
    <formula>Opportunity.Prescriber__r.BillingStreet</formula>
    <label>Prescriber Billing Street</label>
    <type>Text</type>
</CustomField>