force-app/main/default/objects/Quote/fields/Prescriber_Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Billing_Zip__c</fullName>
    <description>Used in Quote template</description>
    <formula>Opportunity.Prescriber__r.BillingPostalCode</formula>
    <label>Prescriber Billing Zip</label>
    <type>Text</type>
</CustomField>