force-app/main/default/objects/Quote/fields/Prescriber_City__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_City__c</fullName>
    <description>Used in quote template.</description>
    <formula>Opportunity.Prescriber__r.BillingCity</formula>
    <label>Prescriber City</label>
    <type>Text</type>
</CustomField>