force-app/main/default/objects/Quote/fields/Prescriber_Details__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Details__c</fullName>
    <formula>&quot;Prescriber: &quot; &amp; Opportunity.Account.Prescriber__r.AccountNumber  &amp;&quot;,&quot;&amp;  Opportunity.Account.Prescriber__r.Name &amp;&quot;, Medical Facility: &quot;&amp;   Opportunity.Prescriber__r.Medical_Facility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prescriber Details</label>
    <type>Text</type>
</CustomField>