force-app/main/default/objects/Quote/fields/Prescriber_ID__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_ID__c</fullName>
    <formula>Opportunity.Account.Prescriber_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prescriber ID</label>
    <type>Text</type>
</CustomField>