force-app/main/default/objects/Quote/fields/Prescriber_Name__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Name__c</fullName>
    <formula>Opportunity.Prescriber__r.FirstName &amp;&quot; &quot;&amp;  Opportunity.Prescriber__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prescriber Name</label>
    <type>Text</type>
</CustomField>