force-app/main/default/objects/Quote/fields/Prescriber_Title__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Title__c</fullName>
    <description>Will be used in Quote Template</description>
    <formula>Opportunity.Prescriber__r.PersonContact.Title + TEXT(Opportunity.Prescriber__r.Salutation)</formula>
    <label>Prescriber Title</label>
    <type>Text</type>
</CustomField>