force-app/main/default/objects/Quote/fields/Subtotal_Net_price__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Net_price__c</fullName>
    <formula>TotalPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal (Net price)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>