force-app/main/default/objects/Quote/fields/Supply_Period_From__c.field-meta.xml
<CustomField>
    <fullName>Supply_Period_From__c</fullName>
    <formula>TEXT(Opportunity.Benefit__r.Auth_Start_Date__c) &amp;&quot; to &quot;&amp; TEXT( Opportunity.Benefit__r.Auth_End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supply Period From</label>
    <type>Text</type>
</CustomField>