force-app/main/default/objects/Quote/fields/Total_amount_Gross_price__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_Gross_price__c</fullName>
    <formula>TotalPrice * 1.19</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total amount (Gross price)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>