force-app/main/default/objects/Quote/fields/Total_Quote_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Quote_Line_Items__c</fullName>
    <label>Total Quote Line Items</label>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>