force-app/main/default/objects/Quote/fields/X19_VAT__c.field-meta.xml
<CustomField>
    <fullName>X19_VAT__c</fullName>
    <formula>IF(OR(ISPICKVAL(Opportunity.StageName, &apos;Closed - Complete&apos;),
  ( TODAY() &lt; DATE(2020,06,15))),
   Subtotal *0.19,
   Subtotal *0.16 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>19% VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>