force-app/main/default/objects/Quote/recordTypes/DE_Quote.recordType-meta.xml
<RecordType>
    <fullName>DE_Quote</fullName>
    <active>true</active>
    <description>Quote record type for Germany</description>
    <label>DE Quote</label>
</RecordType>