force-app/main/default/objects/Quote/validationRules/DE_Cannot_Alter_Prods_For_Rejected_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>DE_Cannot_Alter_Prods_For_Rejected_Quote</fullName>
    <active>true</active>
    <description>If the Quote is not in Draft or Approved status the Products cannot be added or removed</description>
    <errorConditionFormula>AND (
	RecordType.DeveloperName = &apos;DE_Quote&apos;,	
	NOT(OR( 
		$Profile.Name = &quot;System Administrator&quot;, 
		$Profile.Name = &quot;Data Integrator&quot;
	)),
	ISPICKVAL(Status, &apos;Rejected&apos;),
	ISCHANGED(Total_Quote_Line_Items__c)
)</errorConditionFormula>
    <errorMessage>Products cannot be altered for the Quote.</errorMessage>
</ValidationRule>