force-app/main/default/objects/Quote/validationRules/DE_Cannot_Have_More_Than_One_Approved_Qu.validationRule-meta.xml
<ValidationRule>
    <fullName>DE_Cannot_Have_More_Than_One_Approved_Qu</fullName>
    <active>true</active>
    <description>Rule checks to see if there are more than one Approved Quote for this Opportunity</description>
    <errorConditionFormula>AND
(
RecordType.DeveloperName = &apos;DE_Quote&apos;,
ISNEW(),
TEXT(Status) = &apos;Approved&apos;, 
Opportunity.Count_of_Approved_Quotes__c &gt; 0
)</errorConditionFormula>
    <errorMessage>There is already an approved Quote for this Opportunity.</errorMessage>
</ValidationRule>